--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Sagun's Portfolio</title>
 
-<h1>HTML</h1>
-<p>HTML elements are structured to build a web page</p>
-<h2>Headings</h1>
-<p>You can add different sized headings from h1 to h6</p>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-</body>
+  <!-- Toggle light-page ↔ dark-page -->
+
+  <body class="light-page">
+    <!-- Navbar gets added here -->
+    <div id="nav-placeholder"></div>
+
+    <!-- Main content -->
+    <main class="container py-4">
+      <!-- Hero -->
+      <section class="p-5 mb-4 bg-body-tertiary rounded-3">
+        <h1 class="mb-3">Sagun Shrestha</h1>
+        <h3 class="h5">
+          Full Stack Web Developer | Front End Software Engineer
+        </h3>
+      </section>
+
+      <!-- About section -->
+      <div class="box p-5 mb-4">
+        <h3 class="h5">About</h3>
+        <p class="mb-0">This is me. <a href="#">Read more</a></p>
+      </div>
+
+      <!-- Skill list -->
+      <div class="card p-5 shadow-sm mb-4" >
+        <div class="card-body">
+          <h4 class="card-title h5">Skills</h4>
+          <p class="card-text">
+            Cards pick up the surface/background and text from the theme.
+          </p>
+          <!-- List group -->
+          <ul class="list-group mb-4" style="max-width: 28rem">
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Card -->
+      <div class="card shadow-sm mb-4" style="max-width: 40rem">
+        <div class="card-body">
+          <h4 class="card-title h5">Card Title</h4>
+          <p class="card-text">
+            Cards pick up the surface/background and text from the theme.
+          </p>
+          <a class="btn btn-primary" href="#">Card Action</a>
+        </div>
+      </div>
+
+      <!-- List group -->
+      <ul class="list-group mb-4" style="max-width: 28rem">
+        <li class="list-group-item">First item</li>
+        <li class="list-group-item">Second item</li>
+        <li class="list-group-item">Third item</li>
+      </ul>
+    </main>
+
+    <script>
+      // Load only the #site-nav element
+      $("#nav-placeholder").load("navbar.html #site-nav");
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
