--- a/navbar.html
+++ b/navbar.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </div>
         </div>
       </div>
