Filled out index.html
Added social links
filled out about me
and set up skills lists

--- a/project.html
+++ b/project.html
@@ -18,10 +18,12 @@
     <!-- Navbar gets injected here -->
     <div id="nav-placeholder"></div>
 
+    <!-- Main content -->
+    <main class="container py-4">
     <!-- Projects -->
-    <div class="container">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <h1>Projects</h1>
-      <p>This is to help you create new webpages from this template</p>
+      <p>This is me</p>
     </div>
 
     <script>
