--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sagun's Portfolio</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
     <link href="style.css" rel="stylesheet" />
   </head>
 
@@ -28,48 +26,39 @@
         <h3 class="h5">
           Full Stack Web Developer | Front End Software Engineer
         </h3>
-      </section>
 
-      <!-- About section -->
-      <div class="box p-5 mb-4">
-        <h3 class="h5">About</h3>
-        <p class="mb-0">This is me. <a href="#">Read more</a></p>
+        <!-- About section -->
+      <div class="mb-3">
+        <h3 class="h6">About</h3>
+        <p class="mb-0">Iam an aspiring full-stack developer with a passion for creating inclusive apps. 
+          Currently a student at Metropolitan State University Denver pursuing a bachelor degree.  
+          Creating a solid foundation in object-oriented programming and problem-solving in a collaborative environment
+         I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to build functional and reactive websites.</p>
       </div>
 
-      <!-- Skill list -->
-      <div class="card p-5 shadow-sm mb-4" >
+        <!-- Skills section -->
         <div class="card-body">
-          <h4 class="card-title h5">Skills</h4>
-          <p class="card-text">
-            Cards pick up the surface/background and text from the theme.
-          </p>
-          <!-- List group -->
-          <ul class="list-group mb-4" style="max-width: 28rem">
+          <h4 class="card-title pb-2 h6">Hard Skills</h4>
+          <!-- List of Hard skills -->
+          <ul class="list-group mb-2" style="max-width: 28rem">
             <li class="list-group-item">First item</li>
-            <li class="list-group-item">Second item</li>
-            <li class="list-group-item">Third item</li>
+          </ul>
+          <!-- List of Soft skills -->
+          <h4 class="card-title pb-2 h6">Soft Skills</h4>
+          <ul class="list-group mb-2" style="max-width: 28rem">
+            <li class="list-group-item">First item</li>
           </ul>
         </div>
-      </div>
+      </section>
 
-      <!-- Card -->
+      <!-- Social link Card -->
       <div class="card shadow-sm mb-4" style="max-width: 40rem">
         <div class="card-body">
-          <h4 class="card-title h5">Card Title</h4>
-          <p class="card-text">
-            Cards pick up the surface/background and text from the theme.
-          </p>
-          <a class="btn btn-primary" href="#">Card Action</a>
+          <h4 class="card-title h5">Social links</h4>
+          <a class="btn btn-primary" href="https://github.com/sagun1151" target="_blank">Github</a>
+          <a class="btn btn-primary" href="https://www.linkedin.com/in/sagun-shrestha-89ab60223/" target="_blank">LinkedIn</a>
         </div>
       </div>
-
-      <!-- List group -->
-      <ul class="list-group mb-4" style="max-width: 28rem">
-        <li class="list-group-item">First item</li>
-        <li class="list-group-item">Second item</li>
-        <li class="list-group-item">Third item</li>
-      </ul>
-    </main>
 
     <script>
       // Load only the #site-nav element
