--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <div class="mb-3">
         <h3 class="h6">About</h3>
         <p class="mb-0">Iam an aspiring full-stack developer with a passion for creating inclusive apps. 
-          Currently a student at Metropolitan State University Denver pursuing a bachelor degree.  
+          Currently a student at Metropolitan State University Denver pursuing a bachelor degree in <a href="https://www.msudenver.edu/computer-sciences/computer-science-major-bs/" target="_blank">Computer Science</a>.  
           Creating a solid foundation in object-oriented programming and problem-solving in a collaborative environment
-         I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to build functional and reactive websites.</p>
+          I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to build functional and reactive websites.</p>
       </div>
 
         <!-- Skills section -->
@@ -41,18 +41,30 @@
           <h4 class="card-title pb-2 h6">Hard Skills</h4>
           <!-- List of Hard skills -->
           <ul class="list-group mb-2" style="max-width: 28rem">
-            <li class="list-group-item">First item</li>
+            <div class="d-flex flex-row text-nowrap">
+              <li class="list-group-item">Javascrypt</li>
+              <li class="list-group-item">React</li>
+              <li class="list-group-item">HTML</li>
+              <li class="list-group-item">CSS</li>
+              <li class="list-group-item">Bootstrap</li>
+            </div>
           </ul>
           <!-- List of Soft skills -->
           <h4 class="card-title pb-2 h6">Soft Skills</h4>
           <ul class="list-group mb-2" style="max-width: 28rem">
-            <li class="list-group-item">First item</li>
+            <div class="d-flex flex-row text-nowrap">
+              <li class="list-group-item">Communication</li>
+              <li class="list-group-item">Collabration</li>
+              <li class="list-group-item">Problem-Solving</li>
+              <li class="list-group-item">Critical Thinking</li>
+              <li class="list-group-item">Adaptability</li>
+            </div>
           </ul>
         </div>
       </section>
 
       <!-- Social link Card -->
-      <div class="card shadow-sm mb-4" style="max-width: 40rem">
+      <div class="card shadow-sm mb-4" >
         <div class="card-body">
           <h4 class="card-title h5">Social links</h4>
           <a class="btn btn-primary" href="https://github.com/sagun1151" target="_blank">Github</a>
