Some changed to text

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         <h3 class="h5">
           Full Stack Web Developer | Front End Software Engineer
         </h3>
+        <p>Broomfield CO | sshrestha426699@gmail.com</p>
 
         <!-- About section -->
       <div class="mb-3">
-        <h3 class="h6">About</h3>
+        <h3 class="h6">About Me</h3>
         <p class="mb-0">Iam an aspiring full-stack developer with a passion for creating inclusive apps. 
           Currently a student at Metropolitan State University Denver pursuing a bachelor degree in <a href="https://www.msudenver.edu/computer-sciences/computer-science-major-bs/" target="_blank">Computer Science</a>.  
-          Creating a solid foundation in object-oriented programming and problem-solving in a collaborative environment
+          Creating a solid foundation in object-oriented programming and problem-solving in a collaborative environment.
           I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to build functional and reactive websites.</p>
       </div>
 
