Bunch of changes to index and project
index - added an About me section and changed some style codes and layout
projects - added two projects

--- a/project.html
+++ b/project.html
@@ -23,8 +23,37 @@
     <!-- Projects -->
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
       <h1>Projects</h1>
-      <p>This is me</p>
+      <!-- Anime List Project -->
+      <h3>Anime List</h3>
+      <p>Javascript | HTML | CSS Styling | Redux</p>
+      <div class="mb-3">
+      <a class="btn btn-primary" href="https://github.com/sagun1151/web-module-project-async-redux" target="_blank" aria-label="link to Github">Github</a>
+      <a class="btn btn-primary" href="https://web-module-project-async-redux-dsxhismn1-sagun1151.vercel.app/anime" target="_blank" aria-label="link to Project Anime List website">Website</a>
+      </div>
+      <div class="d-flex flex-column">
+        <ul class="mb-2" > 
+            <li>Identified and implemented API calls to gather and display Anime information in a cloud-native application</li>
+            <li>Used async-redux to manage state, data flow, and file navigation</li>
+            <li>Utilized CSS styling, class, and element tag selectors to create an attractive website design layout and UI</li>
+        </ul>
+      </div>  
+      <img src="/AnimeListPic.png" class="img-fluid h-25 mb-5" alt="Image of Anime list website"> 
+      <!-- Figma Design Project -->
+      <h3>Nasa Website Design</h3>
+      <p>Figma</p>
+      <div class="mb-3">
+      <a class="btn btn-primary" 
+      href="https://www.figma.com/design/omJ2hlTpCQh6lgThLzzcHw/Nasa?node-id=0-1&t=zAHOONcxMj8sfOx3-1" 
+      target="_blank" aria-label="link to Figma design">Figma Link</a>
+      </div>
+      <div class="d-flex flex-column">
+        <ul class="mb-2"> 
+            <li>Creating a simple login page with reusable components with prototype mimicking how the real website should wokr </li>
+        </ul>
+      </div>
+      <img src="/FigmaDesignList.png" class="img-fluid h-25 mb-5" alt="Image of FIgma Design"> 
     </div>
+    
 
     <script>
       // Load only the #site-nav element
