--- a/index.html
+++ b/index.html
@@ -1,82 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sagun's Portfolio</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <link href="style.css" rel="stylesheet" />
-  </head>
 
-  <!-- Toggle light-page ↔ dark-page -->
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sagun's Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-  <body class="light-page">
-    <!-- Navbar gets added here -->
-    <div id="nav-placeholder"></div>
+<!-- Toggle light-page ↔ dark-page -->
 
-    <!-- Main content -->
-    <main class="container py-4">
-      <!-- Hero -->
-      <section class="p-5 mb-4 bg-body-tertiary rounded-3">
-        <h1 class="mb-3">Sagun Shrestha</h1>
-        <h3 class="h5">
-          Full Stack Web Developer | Front End Software Engineer
-        </h3>
-        <p>Broomfield CO | sshrestha426699@gmail.com</p>
+<body class="light-page">
+  <!-- Navbar gets added here -->
+  <div id="nav-placeholder"></div>
 
-        <!-- About section -->
+  <!-- Main content -->
+  <main class="container py-4">
+    <!-- Hero -->
+    <section class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div  class="d-flex">
+        <div>
+          <h1 class="mb-3">Sagun Shrestha</h1>
+          <h3 class="h5">
+            Full Stack Web Developer | Front End Software Engineer
+          </h3>
+          <p>Broomfield CO | sshrestha426699@gmail.com</p>
+        </div>
+        <img src="/19.png" alt="Basic avatar picture placceholder" class="img-fluid w-25">
+      </div>
+
+      <!-- Summary section -->
       <div class="mb-3">
-        <h3 class="h6">About Me</h3>
-        <p class="mb-0">Iam an aspiring full-stack developer with a passion for creating inclusive apps. 
-          Currently a student at Metropolitan State University Denver pursuing a bachelor degree in <a href="https://www.msudenver.edu/computer-sciences/computer-science-major-bs/" target="_blank">Computer Science</a>.  
+        <h3 class="h5">Summary</h3>
+        <p class="mb-0">Iam an aspiring full-stack developer with a passion for creating inclusive apps.
+          Currently a student at Metropolitan State University Denver pursuing a bachelor degree in <a
+            href="https://www.msudenver.edu/computer-sciences/computer-science-major-bs/" target="_blank">Computer
+            Science</a>.
           Creating a solid foundation in object-oriented programming and problem-solving in a collaborative environment.
-          I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to build functional and reactive websites.</p>
+          I have also completed a full-stack web development bootcamp Bloomtech where I learned how to use react to
+          build functional and reactive websites.</p>
       </div>
 
-        <!-- Skills section -->
-        <div class="card-body">
-          <h4 class="card-title pb-2 h6">Hard Skills</h4>
-          <!-- List of Hard skills -->
-          <ul class="list-group mb-2" style="max-width: 28rem">
-            <div class="d-flex flex-row text-nowrap">
-              <li class="list-group-item">Javascrypt</li>
-              <li class="list-group-item">React</li>
-              <li class="list-group-item">HTML</li>
-              <li class="list-group-item">CSS</li>
-              <li class="list-group-item">Bootstrap</li>
-            </div>
-          </ul>
-          <!-- List of Soft skills -->
-          <h4 class="card-title pb-2 h6">Soft Skills</h4>
-          <ul class="list-group mb-2" style="max-width: 28rem">
-            <div class="d-flex flex-row text-nowrap">
-              <li class="list-group-item">Communication</li>
-              <li class="list-group-item">Collabration</li>
-              <li class="list-group-item">Problem-Solving</li>
-              <li class="list-group-item">Critical Thinking</li>
-              <li class="list-group-item">Adaptability</li>
-            </div>
-          </ul>
-        </div>
-      </section>
-
-      <!-- Social link Card -->
-      <div class="card shadow-sm mb-4" >
-        <div class="card-body">
-          <h4 class="card-title h5">Social links</h4>
-          <a class="btn btn-primary" href="https://github.com/sagun1151" target="_blank">Github</a>
-          <a class="btn btn-primary" href="https://www.linkedin.com/in/sagun-shrestha-89ab60223/" target="_blank">LinkedIn</a>
-        </div>
+      <!-- Skills section -->
+      <div class="card-body mb-4">
+        <h4 class="card-title pb-2 h6">Hard Skills</h4>
+        <!-- List of Hard skills -->
+        <ul class="list-group mb-2">
+          <div class="d-flex flex-row text-nowrap flex-wrap">
+            <li class="list-group-item">Javascrypt</li>
+            <li class="list-group-item">React</li>
+            <li class="list-group-item">HTML</li>
+            <li class="list-group-item">CSS</li>
+            <li class="list-group-item">Bootstrap</li>
+          </div>
+        </ul>
+        <!-- List of Soft skills -->
+        <h4 class="card-title pb-2 h6">Soft Skills</h4>
+        <ul class="list-group mb-2">
+          <div class="d-flex flex-row text-nowrap flex-wrap">
+            <li class="list-group-item">Communication</li>
+            <li class="list-group-item">Collabration</li>
+            <li class="list-group-item">Problem-Solving</li>
+            <li class="list-group-item">Critical Thinking</li>
+            <li class="list-group-item">Adaptability</li>
+          </div>
+        </ul>
       </div>
+      <div class="mb-3">
+        <h3 class="h5">About Me</h3>
+        <p class="mb-3">When I'm not in class or working I love to be at the gym working out to getting stronger and more limber. I also love working on my pc getting new parts/updating hardware for it. Currently trying to make the perfect typing keyboard.</p>
+        <div class=" d-flex mb-4">
+          <img src="/gym.jpg" class="image-fluid w-50">
+          <img src="/keyboard.jpg" class="image-fluid w-50">
+        </div>
+        <a class="btn btn-primary" 
+        href="https://www.youtube.com/watch?v=NS_GeXoboo4&t=449s" 
+        target="_blank" aria-label="link to youtube video">Youtube video on Working out</a>
+        <a class="btn btn-primary" 
+        href="https://www.youtube.com/watch?v=0VkOFPANar8" 
+        target="_blank" aria-label="link to youtube video">Youtube video on keyboards</a>
+      </div>
+    </section>
+
+    <!-- Social link Card -->
+    <div class="card shadow-sm mb-4">
+      <div class="card-body">
+        <h4 class="card-title h5">Social links</h4>
+        <a class="btn btn-primary" href="https://github.com/sagun1151" target="_blank" aria-label="link to Github">Github</a>
+        <a class="btn btn-primary" href="https://www.linkedin.com/in/sagun-shrestha-89ab60223/"
+          target="_blank" aria-label="link to Linkedin">LinkedIn</a>
+        <a class="btn btn-primary" 
+        href="https://docs.google.com/document/d/1BE4u066TgWsb5-nW0PyV-KjvOuQLsm6mZd_OQW50rzw/edit?usp=sharing" 
+        target="_blank" aria-label="link to Resume">Resume</a>
+      </div>
+    </div>
 
     <script>
       // Load only the #site-nav element
       $("#nav-placeholder").load("navbar.html #site-nav");
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+</body>
+
 </html>
